...
                  width: kGreaterButtonWidth,
                  height: kNormalButtonHeight,
                  child: Tooltip(
                    message: AppLocalizations.of(context)!
                        .playlistToggleButtonInAudioPlayerViewTooltip,
                    child: TextButton(
                      key: const Key('playlist_toggle_button'),
                      style: ButtonStyle(
                        shape: getButtonRoundedShape(
                          currentTheme: themeProviderVM.currentTheme,
                        ),
                        padding: WidgetStateProperty.all<EdgeInsetsGeometry>(
                          const EdgeInsets.symmetric(
...
                  ValueListenableBuilder<bool>(
                    valueListenable:
                        audioPlayerVMlistenFalse.currentAudioPlayPauseNotifier,
                    builder: (context, isPaused, child) {
                      return IconButton(
                        key: const Key(
                            'picture_displayed_play_pause_button_key'),
                        iconSize: _audioIconSizeMedium,
                        onPressed: () async {
                          audioPlayerVMlistenFalse.isPlaying
                              ? await audioPlayerVMlistenFalse.pause()
                              : await audioPlayerVMlistenFalse.playCurrentAudio(
                                  isFromAudioPlayerView: true,
...
  Widget _buildFirstLine({
    required PlaylistListVM playlistListVMlistenTrue,
  }) {
    return Row(
      children: [
        Text(
          key: const Key('selectedPlaylistTitleText'),
          playlistListVMlistenTrue.uniqueSelectedPlaylist?.title ?? '',
          style: const TextStyle(
            fontSize: 12,
          ),
          maxLines: 1,
        ),
...
      valueListenable: audioPlayerVMlistenFalse.currentAudioTitleNotifier,
      builder: (context, currentAudioTitle, child) {
        return Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            IconButton(
              key: const Key('audioPlayerViewSkipToStartButton'),
              iconSize: _audioIconSizeMedium,
              onPressed: () async => await audioPlayerVMlistenFalse.skipToStart(
                // Setting isFromAudioPlayerView to true enables to
                // set the audioplayers source to the current audio
                // file if the audioplayers was stopped. This avoids
                // that the position buttons don't work after the audio
...
                    );
                  },
                ),
              ),
            ),
            IconButton(
              key: const Key('audioPlayerViewSkipToEndButton'),
              iconSize: _audioIconSizeMedium,
              onPressed: () async =>
                  await audioPlayerVMlistenFalse.skipToEndAndPlay(),
              style: ButtonStyle(
                padding: WidgetStateProperty.all<EdgeInsetsGeometry>(
                  const EdgeInsets.symmetric(
...
                  padding:
                      const EdgeInsets.symmetric(horizontal: kDefaultMargin),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceAround,
                    children: [
                      Text(
                        key: const Key('audioPlayerViewAudioPosition'),
                        currentAudioPositionStr,
                        style: kSliderValueTextStyle,
                      ),
                      Expanded(
                        child: SliderTheme(
                          data: const SliderThemeData(
...
                              );
                            },
                          ),
                        ),
                      ),
                      Text(
                        key: const Key('audioPlayerViewAudioRemainingDuration'),
                        remainingAudioDurationStr,
                        style: kSliderValueTextStyle,
                      ),
                    ],
                  ),
                );
...
                        ),
                        icon: const Icon(Icons.fast_forward),
                      ),
                    ),
                    Expanded(
                      child: IconButton(
                        key: const Key('audioPlayerViewForward1mButton'),
                        iconSize: _audioIconSizeMedium,
                        onPressed: () async => await audioPlayerVMlistenFalse
                            .changeAudioPlayPosition(
                          posOrNegPositionModificationInSeconds:
                              60,
                        ),
...
