...
    AudioLearnAppViewType.playlistDownloadView,
    AudioLearnAppViewType.audioPlayerView,
    // AudioLearnAppViewType.audioExtractorView,
  ];

  final List<Key> _screenNavigationIconButtonKeyLst = [
    const Key('playlistDownloadViewIconButton'),
    const Key('audioPlayerViewIconButton'),
    // const Key('audioExtractorIconButton'),
  ];

  // contains a list of widgets which build the AppBar title. Each
  // widget is specific to the screen currently displayed. This list
...
