import 'dart:io';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:logger/logger.dart';
import 'package:matcher/matcher.dart' as matcher;

import 'package:audiolearn/models/comment.dart';
import 'package:audiolearn/services/json_data_service.dart';
import 'package:audiolearn/utils/date_time_parser.dart';
import 'package:audiolearn/utils/date_time_util.dart';
import 'package:audiolearn/utils/duration_expansion.dart';
import 'package:audiolearn/views/widgets/comment_add_edit_dialog.dart';
import 'package:audiolearn/views/widgets/playlist_comment_list_dialog.dart';
import 'package:audiolearn/views/widgets/set_value_to_target_dialog.dart';
import 'package:path/path.dart' as path;
import 'package:audiolearn/constants.dart';
import 'package:audiolearn/utils/dir_util.dart';

import 'integration_test_util.dart';
import 'sort_filter_integration_test.dart';

enum AudioPositionModification {
  backward10sec,
  backward1min,
  forward10sec,
  forward1min,
}

void main() {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  audioPlayerViewSortFilterIntegrationTest();

  final Logger logger = Logger();

  group('''Play/pause/start/end tests, clicking on audio title to open
         AudioPlayerView.''', () {
    testWidgets('Check play/pause button conversion only.', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle =
          'audio_player_view_2_shorts_test';
      const String lastDownloadedAudioTitle = 'morning _ cinematic video';

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName: 'audio_player_view_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // Now we want to tap on the lastly downloaded audio of the
      // playlist in order to open the AudioPlayerView displaying
      // the currently paused audio

      // First, get the lastly downloaded Audio ListTile Text
      // widget finder and tap on it
      final Finder lastDownloadedAudioListTileTextWidgetFinder =
          find.text(lastDownloadedAudioTitle);

      await tester.tap(lastDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Verify that the play/pause button displayed when a picture
      // is present is not displayed.
      Finder playPauseButtonFinder = find.byKey(
        const Key('picture_displayed_play_pause_button_key'),
      );
      expect(playPauseButtonFinder, findsNothing);

      await tester.tap(find.byIcon(Icons.play_arrow));
      await tester.pumpAndSettle();

      await Future.delayed(const Duration(seconds: 1));
      await tester.pumpAndSettle(const Duration(milliseconds: 200));

      // Verify if the play button changes to pause button
      expect(find.byIcon(Icons.pause), findsOneWidget);

      // Verify that the selected playlist title is displayed
      Text selectedPlaylistTitleText =
          tester.widget(find.byKey(const Key('selectedPlaylistTitleText')));
      expect(
        selectedPlaylistTitleText.data,
        audioPlayerSelectedPlaylistTitle,
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Play audio during 5 seconds and then pause it. Then click on |<, and
           then on |> button''', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle =
          'audio_player_view_2_shorts_test';
      const String lastDownloadedAudioTitle = 'morning _ cinematic video';

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName: 'audio_player_view_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // Now we want to tap on the lastly downloaded audio of the
      // playlist in order to open the AudioPlayerView displaying
      // the currently not played audio

      // First, get the lastly downloaded Audio ListTile Text
      // widget finder and tap on it
      final Finder lastDownloadedAudioListTileTextWidgetFinder =
          find.text(lastDownloadedAudioTitle);

      await tester.tap(lastDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Now verify if the displayed audio position and remaining
      // duration are correct

      Text audioPositionText = tester
          .widget<Text>(find.byKey(const Key('audioPlayerViewAudioPosition')));
      expect(audioPositionText.data, '0:00');

      Text audioRemainingDurationText = tester.widget<Text>(
          find.byKey(const Key('audioPlayerViewAudioRemainingDuration')));
      expect(audioRemainingDurationText.data, '0:47');

      // Verify that the selected playlist title is displayed
      Text selectedPlaylistTitleText =
          tester.widget(find.byKey(const Key('selectedPlaylistTitleText')));
      expect(
        selectedPlaylistTitleText.data,
        audioPlayerSelectedPlaylistTitle,
      );

      IntegrationTestUtil.verifyAudioDataElementsUpdatedInPlaylistJsonFile(
        audioPlayerSelectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        playableAudioLstAudioIndex: 0,
        audioTitle: lastDownloadedAudioTitle,
        audioPositionSeconds: 0,
        isPaused: true,
        isPlayingOrPausedWithPositionBetweenAudioStartAndEnd: false,
        audioPausedDateTime: null,
      );

      // Now play the audio and wait 5 seconds
      await tester.tap(find.byIcon(Icons.play_arrow));
      await tester.pumpAndSettle();

      // Ensure that the audio position is updated
      for (int i = 0; i < 10; i++) {
        await Future.delayed(const Duration(milliseconds: 500));
        await tester.pumpAndSettle();
      }

      // Not tapping on pause button to pause the audio. This is done
      // after the verifyAudioDataElementsUpdatedInPlaylistJsonFile()
      // method called below.

      // Since the playlist json file is updated every 30 seconds,
      // after playing during 5 seconds, it will not be updated.
      IntegrationTestUtil.verifyAudioDataElementsUpdatedInPlaylistJsonFile(
        audioPlayerSelectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        playableAudioLstAudioIndex: 0,
        audioTitle: lastDownloadedAudioTitle,
        audioPositionSeconds: 0,
        isPaused: false,
        isPlayingOrPausedWithPositionBetweenAudioStartAndEnd: true,
        audioPausedDateTime: null,
      );

      // Verify if the play button changed to pause button
      final Finder pauseIconFinder = find.byIcon(Icons.pause);
      expect(pauseIconFinder, findsOneWidget);

      // Now pause the audio
      await tester.tap(pauseIconFinder);
      await tester.pumpAndSettle(const Duration(milliseconds: 200));

      DateTime pausedAudioAtDateTime = DateTime.now();

      IntegrationTestUtil.verifyAudioDataElementsUpdatedInPlaylistJsonFile(
        audioPlayerSelectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        playableAudioLstAudioIndex: 0,
        audioTitle: lastDownloadedAudioTitle,
        audioPositionSeconds: 5,
        isPaused: true,
        isPlayingOrPausedWithPositionBetweenAudioStartAndEnd: true,
        audioPausedDateTime: pausedAudioAtDateTime,
      );

      await Future.delayed(const Duration(seconds: 1));

      audioPositionText = tester
          .widget<Text>(find.byKey(const Key('audioPlayerViewAudioPosition')));
      Duration audioPositionDurationAfterPauseActual =
          DateTimeParser.parseMMSSDuration(audioPositionText.data ?? '')!;

      audioRemainingDurationText = tester.widget<Text>(
          find.byKey(const Key('audioPlayerViewAudioRemainingDuration')));
      Duration audioRemainingDurationAfterPauseActual =
          DateTimeParser.parseMMSSDuration(
              audioRemainingDurationText.data ?? '')!;

      Duration sumDurations = audioPositionDurationAfterPauseActual +
          audioRemainingDurationAfterPauseActual;

      // Check if the sum of the actual audio position duration
      // and the actual audio remaining duration is equal to 46 or
      // 47 seconds which is the total duration of the listened
      // audio minus 1 second. Checking the value of the audio
      // position and remaining duration is not safe.
      expect(sumDurations >= const Duration(seconds: 46), isTrue);
      expect(sumDurations <= const Duration(seconds: 47), isTrue);

      // Verify if the pause button changed back to play button
      expect(find.byIcon(Icons.play_arrow), findsOneWidget);

      // Now go to the end of the audio
      await tester.tap(find.byKey(const Key('audioPlayerViewSkipToEndButton')));
      await tester.pumpAndSettle();

      IntegrationTestUtil.verifyAudioDataElementsUpdatedInPlaylistJsonFile(
        audioPlayerSelectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        playableAudioLstAudioIndex: 0,
        audioTitle: lastDownloadedAudioTitle,
        audioPositionSeconds: 59,
        isPaused: true,
        isPlayingOrPausedWithPositionBetweenAudioStartAndEnd: false,
        audioPausedDateTime: pausedAudioAtDateTime,
      );

      // Now go to the start of the audio
      await tester
          .tap(find.byKey(const Key('audioPlayerViewSkipToStartButton')));
      await tester.pumpAndSettle();

      IntegrationTestUtil.verifyAudioDataElementsUpdatedInPlaylistJsonFile(
        audioPlayerSelectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        playableAudioLstAudioIndex: 0,
        audioTitle: lastDownloadedAudioTitle,
        audioPositionSeconds: 0,
        isPaused: true,
        isPlayingOrPausedWithPositionBetweenAudioStartAndEnd: false,
        audioPausedDateTime: pausedAudioAtDateTime,
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Click on play button to finish playing the audio downloaded before
           the last downloaded audio and start playing the not listened last
           downloaded audio.''', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle = 'S8 audio';
      const String previousEndDownloadedAudioTitle =
          '3 fois où Aurélien Barrau tire à balles réelles sur les riches';
      const String previousEndDownloadedAudioTitleWithDuration =
          '3 fois où Aurélien Barrau tire à balles réelles sur les riches\n5:53';

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName: 'audio_player_view_first_to_last_audio_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // Now we want to tap on the audio downloaded before the last
      // downloaded audio of the playlist in order to open the
      // AudioPlayerView displaying the audio.

      // First, get the previous end downloaded audio ListTile Text
      // widget finder and tap on it
      final Finder previousEndDownloadedAudioListTileTextWidgetFinder =
          find.text(previousEndDownloadedAudioTitle);

      await tester.tap(previousEndDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Now we tap on the play button in order to finish
      // playing the audio downloaded before the last downloaded
      // audio and start playing the last downloaded audio of the
      // playlist.

      // Verify that the selected playlist title is displayed
      Text selectedPlaylistTitleText =
          tester.widget(find.byKey(const Key('selectedPlaylistTitleText')));
      expect(
        selectedPlaylistTitleText.data,
        audioPlayerSelectedPlaylistTitle,
      );

      await tester.tap(find.byIcon(Icons.play_arrow));
      await tester.pumpAndSettle();

      await Future.delayed(const Duration(seconds: 5));
      await tester.pumpAndSettle();

      // Click on the pause button to stop the last downloaded audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Verify the last downloaded played audio title
      expect(find.text(previousEndDownloadedAudioTitleWithDuration),
          findsOneWidget);

      // Verify that the selected playlist title is displayed
      selectedPlaylistTitleText =
          tester.widget(find.byKey(const Key('selectedPlaylistTitleText')));
      expect(
        selectedPlaylistTitleText.data,
        audioPlayerSelectedPlaylistTitle,
      );

      // Ensure that the bug corrected on AudioPlayerVM on 06-06-2024
      // no longer happens. This bug impacted the application during
      // 3 weeks before it was discovered !!!!
      final Finder audioPlayerViewAudioPositionFinder =
          find.byKey(const Key('audioPlayerViewAudioPosition'));

      IntegrationTestUtil.verifyPositionBetweenMinMax(
        tester: tester,
        textWidgetFinder: audioPlayerViewAudioPositionFinder,
        minPositionTimeStr: '0:04',
        maxPositionTimeStr: '0:07',
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Click on play button to finish playing the audio downloaded before
           the last downloaded audio and start playing the partially listened
           last downloaded audio.''', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle = 'S8 audio';
      const String secondDownloadedAudioTitle =
          'Ce qui va vraiment sauver notre espèce par Jancovici et Barrau';
      const String firstDownloadedAudioTitle =
          '3 fois où Aurélien Barrau tire à balles réelles sur les riches';
      const String lastDownloadedAudioTitleWithDuration =
          "3 fois où un économiste m'a ouvert les yeux (Giraud, Lefournier, Porcher)\n16:26";

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName:
            'audio_player_view_first_to_last_audio_corrected_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // First, we modify the audio position of the first downloaded audio
      // of the playlist. First, get the first downloaded audio ListTile Text
      // widget finder and tap on it
      final Finder
          playlistDownloadViewFirstDownloadedAudioListTileTextWidgetFinder =
          find.text(firstDownloadedAudioTitle);

      await tester.tap(
          playlistDownloadViewFirstDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Tapping 5 times on the forward 1 minute icon button. Now, the first
      // downloaded audio of the playlist is partially listened.
      for (int i = 0; i < 5; i++) {
        await tester
            .tap(find.byKey(const Key('audioPlayerViewForward1mButton')));
        await tester.pumpAndSettle();
      }

      // Playing the first downloaded audio during 1 second.

      await tester.tap(find.byIcon(Icons.play_arrow));
      Future.delayed(const Duration(seconds: 1));
      await tester.pumpAndSettle(const Duration(milliseconds: 1500));

      // Click on the pause button to stop the first downloaded audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Now we want to tap on the audio downloaded after the first
      // downloaded audio of the playlist in order to start playing
      // it.

      // First, go back to the playlist download view.
      final Finder appScreenNavigationButton =
          find.byKey(const ValueKey('playlistDownloadViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await tester.pumpAndSettle();

      // Then, get the second downloaded audio ListTile Text widget
      // finder and tap on it
      final Finder secondDownloadedAudioListTileTextWidgetFinder =
          find.text(secondDownloadedAudioTitle);

      await tester.tap(secondDownloadedAudioListTileTextWidgetFinder);
      await tester.pumpAndSettle(const Duration(milliseconds: 500));

      // Now we tap on the play button in order to finish
      // playing the audio downloaded after the first downloaded
      // audio and start playing the first downloaded audio of the
      // playlist.

      await tester.tap(find.byIcon(Icons.play_arrow));
      await Future.delayed(const Duration(seconds: 5));
      await tester.pumpAndSettle();

      // Click on the pause button to stop the first downloaded audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Verify the last downloaded played audio title
      expect(find.text(lastDownloadedAudioTitleWithDuration), findsOneWidget);

      // Ensure that the bug corrected on AudioPlayerVM on 06-06-2024
      // no longer happens. This bug impacted the application during
      // 3 weeks before it was discovered !!!!
      final Finder audioPlayerViewAudioPositionFinder =
          find.byKey(const Key('audioPlayerViewAudioPosition'));

      IntegrationTestUtil.verifyPositionBetweenMinMax(
        tester: tester,
        textWidgetFinder: audioPlayerViewAudioPositionFinder,
        minPositionTimeStr: '16:07',
        maxPositionTimeStr: '16:12',
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Click on play button to finish playing the first downloaded audio
           and start playing the not listened last downloaded audio, ignoring
           the 2 precendent audio already fully played.''', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle = 'S8 audio';
      const String secondDownloadedAudioTitle =
          'Ce qui va vraiment sauver notre espèce par Jancovici et Barrau';

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName: 'audio_player_view_first_to_last_audio_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // Click on playlist toggle button to hide the playlist list
      await tester.tap(find.byKey(const Key('playlist_toggle_button')));
      await tester.pumpAndSettle();

      // Now we want to tap on the first downloaded audio of the
      // playlist in order to open the AudioPlayerView displaying
      // the audio

      // First, get the first downloaded Audio ListTile Text
      // widget finder and tap on it
      final Finder firstDownloadedAudioListTileTextWidgetFinder =
          find.text(secondDownloadedAudioTitle);

      await tester.tap(firstDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Now we tap on the play button in order to finish
      // playing the first downloaded audio and start playing
      // the last downloaded audio of the playlist. The 2
      // audio in between are ignored since they are already
      // fully played.

      await tester.tap(find.byIcon(Icons.play_arrow));
      await tester.pumpAndSettle();

      await Future.delayed(const Duration(seconds: 5));
      await tester.pumpAndSettle(const Duration(milliseconds: 1500));

      // Click on the pause button
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Verify the last downloaded played audio title
      expect(
          find.text(
              "L'argument anti-nuke qui m'inquiète le plus par Y.Rousselet\n7:53"),
          findsOneWidget);

      // Ensure that the bug corrected on AudioPlayerVM on 06-06-2024
      // no longer happens. This bug impacted the application during
      // 3 weeks before it was discovered !!!!
      final Finder audioPlayerViewAudioPositionFinder =
          find.byKey(const Key('audioPlayerViewAudioPosition'));

      IntegrationTestUtil.verifyPositionBetweenMinMax(
        tester: tester,
        textWidgetFinder: audioPlayerViewAudioPositionFinder,
        minPositionTimeStr: '7:28',
        maxPositionTimeStr: '7:33',
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets('''Click on play button to finish playing the first
           downloaded audio and start playing the partially listened last downloaded
           audio, ignoring the 2 precendent audio already fully played.''', (
      WidgetTester tester,
    ) async {
      const String audioPlayerSelectedPlaylistTitle = 'S8 audio';
      const String firstDownloadedAudioTitle =
          'Ce qui va vraiment sauver notre espèce par Jancovici et Barrau';
      const String secondDownloadedAudioTitle =
          '3 fois où Aurélien Barrau tire à balles réelles sur les riches';

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName:
            'audio_player_view_first_to_last_audio_test_modified',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
        tapOnPlaylistToggleButton: false,
      );

      // First, we modify the audio position of the second downloaded
      // audio of the playlist. First, get the second downloaded audio
      // ListTile Text widget finder and tap on it
      final Finder
          playlistDownloadViewSecondDownloadedAudioListTileTextWidgetFinder =
          find.text(secondDownloadedAudioTitle);

      await tester.tap(
          playlistDownloadViewSecondDownloadedAudioListTileTextWidgetFinder);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Tapping 5 times on the forward 1 minute icon button. Now, the
      // second downloaded audio of the playlist is fully listened.
      for (int i = 0; i < 5; i++) {
        await tester
            .tap(find.byKey(const Key('audioPlayerViewForward1mButton')));
        await tester.pumpAndSettle();
      }

      // Playing the audio during 2 seconds.

      await tester.tap(find.byIcon(Icons.play_arrow));
      await tester.pumpAndSettle();

      await Future.delayed(const Duration(seconds: 2));
      await tester.pumpAndSettle(const Duration(milliseconds: 1500));

      // Click on the pause button to stop the last downloaded audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Now we want to tap on the first downloaded audio of the
      // playlist in order to start playing it.

      // First, go back to the playlist download view.
      final Finder appScreenNavigationButton =
          find.byKey(const ValueKey('playlistDownloadViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await tester.pumpAndSettle();

      // Tap the 'Toggle List' button to avoid displaying the list
      // of playlists which may hide the audio title we want to
      // tap on
      await tester.tap(find.byKey(const Key('playlist_toggle_button')));
      await tester.pumpAndSettle();

      // Then, get the first downloaded Audio ListTile Text
